--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>RESPONSIVE</title>
   <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -23,6 +23,87 @@
             <p>We help fashion brands stand out with our expertise in branding, marketing, and creative solutions that captivate audiences and differentiate brands.</p>
             <a href="#"><i class="ri-arrow-down-line"></i><span>OUR STORY</span></a>
           </div>
+      </div>
+    </section>
+    <section class="view2">
+      <div class="top">
+          <div class="element">
+            <small>CLIENTS</small>
+            <h2>150+</h2>
+          </div>
+          <div class="element">
+            <small>PROJECTS</small>
+            <h2>400+</h2>
+          </div>
+      </div>
+      <div class="bottom">
+        <div class="element">
+            <small>HAPPY CLIENTS</small>
+            <h2>100%</h2>
+          </div>
+          <div class="element">
+            <small>FOLLOWER</small>
+            <h2>200k</h2>
+          </div>
+      </div>
+    </section>
+    <section class="view3">
+      <div class="top">
+          <img src="./images/img2.jpg" alt="">
+      </div>
+      <div class="bottom">
+          <p>OUR PHILODOPHY</p>
+          <div class="text">
+            <h1>Putting Our Clients' Success First</h1>
+            <div class="paragraph">
+             <p>
+              At our agency, we firmly believe in putting our clients' success
+              first. We are dedicated to understanding their unique goals,
+              challenges, and vision, and we tailor our services to meet their
+              specific needs.
+            </p>
+            <p>Our collaborative approach ensures that our
+              clients receive personalized attention, exceptional service, and
+              measurable results, fostering long-term partnerships built on
+              trust and mutual success.</p>
+              </div>
+          </div>
+      </div>
+    </section>
+    <section class="view4">
+      <div class="top">
+          <img src="./images/img3.jpg" alt="">
+      </div>
+      <div class="bottom">
+          <p>OUR VISION</p>
+          <div class="text">
+            <h1>Setting the Standard for Excellence</h1>
+            <div class="paragraph">
+             <p>
+              
+              We are committed to setting the standard for excellence in
+              everything we do. With a relentless pursuit of quality,
+              innovation, and results, we strive to exceed expectations and
+              deliver exceptional 
+            
+            </p>
+            <p>outcomes for our clients. Our team of industry
+              experts, combined with our unwavering dedication to excellence,
+              positions us as a leader in the fashion agency landscape..</p>
+              </div>
+          </div>
+      </div>
+    </section>
+    <section class="view5">
+      <div class="card">
+      <div class="top">
+        <i class="ri-twitter-line"></i>
+        <i class="ri-instagram-line"></i>
+        <i class="ri-linkedin-box-fill"></i>
+      </div>
+      <div class="bottom">
+
+      </div>
       </div>
     </section>
   </main>
