Initial commit - Alvy Studio Clone Website

--- a/index.html
+++ b/index.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RESPONSIVE</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <main>
     <section class="view1">
       <div class="top">
-          <img src="./images/img1.jpg" alt="">
+        <img src="./images/img1.jpg" alt="">
       </div>
       <div class="bottom">
-          <p>STUDIO</p>
-          <div class="text">
-            <h1>How We Help Fashion Brands Stand Out</h1>
-            <p>We help fashion brands stand out with our expertise in branding, marketing, and creative solutions that captivate audiences and differentiate brands.</p>
-            <a href="#"><i class="ri-arrow-down-line"></i><span>OUR STORY</span></a>
-          </div>
+        <p>STUDIO</p>
+        <div class="text">
+          <h1>How We Help Fashion Brands Stand Out</h1>
+          <p>We help fashion brands stand out with our expertise in branding, marketing, and creative solutions that
+            captivate audiences and differentiate brands.</p>
+          <a href="#"><i class="ri-arrow-down-line"></i><span>OUR STORY</span></a>
+        </div>
       </div>
     </section>
     <section class="view2">
       <div class="top">
-          <div class="element">
-            <small>CLIENTS</small>
-            <h2>150+</h2>
-          </div>
-          <div class="element">
-            <small>PROJECTS</small>
-            <h2>400+</h2>
-          </div>
+        <div class="element">
+          <small>CLIENTS</small>
+          <h2>150+</h2>
+        </div>
+        <div class="element">
+          <small>PROJECTS</small>
+          <h2>400+</h2>
+        </div>
       </div>
       <div class="bottom">
         <div class="element">
-            <small>HAPPY CLIENTS</small>
-            <h2>100%</h2>
-          </div>
-          <div class="element">
-            <small>FOLLOWER</small>
-            <h2>200k</h2>
-          </div>
+          <small>HAPPY CLIENTS</small>
+          <h2>100%</h2>
+        </div>
+        <div class="element">
+          <small>FOLLOWER</small>
+          <h2>200k</h2>
+        </div>
       </div>
     </section>
     <section class="view3">
       <div class="top">
-          <img src="./images/img2.jpg" alt="">
+        <img src="./images/img2.jpg" alt="">
       </div>
       <div class="bottom">
-          <p>OUR PHILODOPHY</p>
-          <div class="text">
-            <h1>Putting Our Clients' Success First</h1>
-            <div class="paragraph">
-             <p>
+        <p>OUR PHILODOPHY</p>
+        <div class="text">
+          <h1>Putting Our Clients' Success First</h1>
+          <div class="paragraph">
+            <p>
               At our agency, we firmly believe in putting our clients' success
               first. We are dedicated to understanding their unique goals,
               challenges, and vision, and we tailor our services to meet their
@@ -66,46 +66,116 @@
               clients receive personalized attention, exceptional service, and
               measurable results, fostering long-term partnerships built on
               trust and mutual success.</p>
-              </div>
           </div>
+        </div>
       </div>
     </section>
     <section class="view4">
       <div class="top">
-          <img src="./images/img3.jpg" alt="">
+        <img src="./images/img3.jpg" alt="">
       </div>
       <div class="bottom">
-          <p>OUR VISION</p>
-          <div class="text">
-            <h1>Setting the Standard for Excellence</h1>
-            <div class="paragraph">
-             <p>
-              
+        <p>OUR VISION</p>
+        <div class="text">
+          <h1>Setting the Standard for Excellence</h1>
+          <div class="paragraph">
+            <p>
+
               We are committed to setting the standard for excellence in
               everything we do. With a relentless pursuit of quality,
               innovation, and results, we strive to exceed expectations and
-              deliver exceptional 
-            
+              deliver exceptional
+
             </p>
             <p>outcomes for our clients. Our team of industry
               experts, combined with our unwavering dedication to excellence,
               positions us as a leader in the fashion agency landscape..</p>
-              </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="team">
+      <div>
+        <h1>OUR TEAM</h1>
       </div>
     </section>
     <section class="view5">
-      <div class="card">
+      <div id="card" class="card1">
+        <div class="top">
+          <div class="icon">
+            <i class="ri-twitter-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-instagram-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-linkedin-fill"></i>
+          </div>
+        </div>
+        <div class="bottom">
+          <h4>Arlene McCoy</h4>
+          <p>BRANDING</p>
+        </div>
+      </div>
+      <div id="card" class="card2">
+        <div class="top">
+          <div class="icon">
+            <i class="ri-twitter-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-instagram-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-linkedin-fill"></i>
+          </div>
+        </div>
+        <div class="bottom">
+          <h4>bessie cooper</h4>
+          <p>MARKETING</p>
+        </div>
+      </div>
+      <div id="card" class="card3">
+        <div class="top">
+          <div class="icon">
+            <i class="ri-twitter-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-instagram-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-linkedin-fill"></i>
+          </div>
+        </div>
+        <div class="bottom">
+          <h4>marvin mckinney</h4>
+          <p>VIDEO</p>
+        </div>
+      </div>
+    </section>
+    <section class="view6">
       <div class="top">
-        <i class="ri-twitter-line"></i>
-        <i class="ri-instagram-line"></i>
-        <i class="ri-linkedin-box-fill"></i>
+        <img src="./images/person4.jpg" alt="">
       </div>
       <div class="bottom">
-
+        <div class="text">
+          <p>JOIN OUR TEAM</p>
+          <h1>Want to shape the future of Fashion?</h1>
+        </div>
+        <a href="#"><i class="ri-arrow-right-up-line"></i><span>FIND JOB</span></a>
       </div>
+    </section>
+    <section class="view7">
+      <div class="contact-card">
+        <div class="top">
+          <p>CONTENT</p>
+          <h1>let's make your fashion brand shine</h1>
+        </div>
+        <div class="bottom">
+          <button>Get in Touch<i class="ri-arrow-right-up-line"></i></button>
+        </div>
       </div>
     </section>
   </main>
 </body>
+
 </html>
