Initial commit - Alvy Studio Clone Website

--- a/index.html
+++ b/index.html
@@ -175,6 +175,25 @@
         </div>
       </div>
     </section>
+    <section class="view8">
+      <div class="about">
+      <div class="top">
+        
+        <h1>ALVY</h1>
+      </div>
+      <div class="bottom">
+         <div class="icon">
+            <i class="ri-twitter-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-instagram-line"></i>
+          </div>
+          <div class="icon">
+            <i class="ri-linkedin-fill"></i>
+          </div>
+      </div>
+      </div>
+    </section>
   </main>
 </body>
 
